<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="media_activity">Media activity</string>
    <string name="practicum_android_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="feedback_addressee_mail">chernov.i.u@gmail.com</string>
    <string name="feedback_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="feedback_message_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicum_term_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="clear_button">Кнопка удаления введенного текста поиска</string>
    <string name="artwork_content_description">artwork</string>
    <string name="unsuccessful_search_image">unsuccessful search image</string>
    <string name="nothing_is_found">Ничего не нашлось</string>
    <string name="no_internet_connection">
        Проблемы со связью \n
        \n
        Загрузка не удалась. Проверьте подключение к интернету
    </string>
    <string name="server_error">Ошибка сервера</string>
    <string name="refresh_search">Обновить</string>
    <string name="looked_for">Вы искали</string>
    <string name="clear_search_history">Очистить историю</string>
    <string name="media_duration">Длительность</string>
    <string name="track_cover">Обложка трека</string>
    <string name="playlist_cover">Обложка плейлиста</string>
    <string name="back_arrow_description">Стрелка назад</string>
    <string name="media_year">Год</string>
    <string name="media_genre">Жанр</string>
    <string name="media_country">Страна</string>
    <string name="no_preview_url">Аудиозапись недоступна</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="empty_media_image">Ваша медиатека пуста</string>
    <string name="no_playlists_image">Не создано ни одного плейлиста</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="permission_required">Для выбора обложки необходимо разрешение на чтение\nизображений из внешнего хранилища</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="save_pl_dialog_title">Завершить создание плейлиста?</string>
    <string name="save_pl_dialog_message">Все несохраненные данные будут потеряны</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_is_in_pl_already">Трек уже добавлен в плейлист</string>
    <string name="track_added_to_pl">Добавлено в плейлист</string>
    <string name="read_image_rationale">Необходимо разрешение для чтения файлов из общего хранилища</string>
    <string name="playlist">Плейлист</string>
    <string name="created">создан</string>
    <string name="media_album">Альбом</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="delete_playlist_question">Хотите удалить плейлист</string>
    <string name="delete_track_title">Удалить трек</string>
    <string name="delete_track_message">Хотите удалить трек?</string>
    <string name="delete">Удалить</string>
    <string name="no_tracks_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="want_to_delete_playlist">Хотите удалить плейлист</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="saved">сохранен</string>
    <string name="no_tracks_in_playlist">В этом плейлисте нет треков</string>
    <plurals name="plurals_tracks">
        <item quantity="zero">0 треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>
    <plurals name="plurals_minutes">
        <item quantity="zero">0 минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
</resources>