<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_12"
    tools:context=".media.ui.PlaylistsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlists_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_playlist_button"
        style="@style/SearchScreenSupportButtons"
        android:layout_marginTop="@dimen/size_12"
        android:text="@string/new_playlist"
        app:shapeAppearance="@style/ShapeAppearance.App.SmallComponent" />

    <FrameLayout
        android:id="@+id/empty_playlists_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/size_24"
        app:fontFamily="@font/ys_display_medium">

        <ImageView
            android:id="@+id/no_playlists_image"
            android:layout_width="@dimen/size_120"
            android:layout_height="@dimen/size_120"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_86"
            android:contentDescription="@string/no_playlists_image"
            android:src="@drawable/nothing_is_found" />

        <TextView
            android:id="@+id/no_playlists_text"
            android:layout_width="@dimen/size_312"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/size_224"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal"
            android:text="@string/no_playlists"
            android:textSize="19sp"
            app:fontWeight="@dimen/font_weight_settings" />

    </FrameLayout>

</FrameLayout>