<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="14dp"
    android:paddingEnd="15dp"
    android:paddingBottom="28dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/main_text_size" />


    <Button
        android:id="@+id/main_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/minimum"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="0dp"
        android:layout_weight="1"
        android:foreground="@drawable/ic_ripple_effect"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/search"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="@dimen/main_text_size"
        app:cornerRadius="@dimen/corner_radius_main"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_icon_padding"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/main_media"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/minimum"
        android:layout_marginTop="@dimen/vertical_margin_main_buttons"
        android:layout_weight="1"
        android:foreground="@drawable/ic_ripple_effect"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/media"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="@dimen/main_text_size"
        app:cornerRadius="@dimen/corner_radius_main"
        app:icon="@drawable/ic_media"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_icon_padding"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/main_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/minimum"
        android:layout_marginTop="@dimen/vertical_margin_main_buttons"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:foreground="@drawable/ic_ripple_effect"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/black"
        android:textSize="@dimen/main_text_size"
        app:cornerRadius="@dimen/corner_radius_main"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_icon_padding"
        app:iconTint="@color/black" />

</LinearLayout>