<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".playlists.ui.PlaylistCreationFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintGuide_begin="@dimen/size_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="@dimen/size_16"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back">

        <TextView
            android:id="@+id/back_to_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/new_playlist"
            android:textSize="@dimen/main_text_size"
            app:fontWeight="500" />

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/pl_cover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/size_8"
        android:layout_marginTop="@dimen/size_24"
        android:contentDescription="@string/new_playlist"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_pl_cover"
        app:layout_constraintBottom_toTopOf="@id/playlist_name_layout"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/playlist_name_layout"
        style="@style/FloatingHintStyle"
        android:textColorHint="@color/black_light_white_night"
        android:layout_marginTop="@dimen/size_32"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/pl_cover">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/playlist_name"
            style="@style/TextInputEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_pl_features_rounded"
            android:hint="@string/playlist_name"
            android:lines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:id="@+id/playlist_description_layout"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_8"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/playlist_name_layout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8">

            <EditText
                android:id="@+id/playlist_description"
                style="@style/SettingsTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_pl_features_rounded"
                android:hint="@string/playlist_description"
                android:inputType="text"
                android:lines="1"
                android:padding="@dimen/size_16"
                android:textColorHint="@color/black_light_white_night" />

        </RelativeLayout>

        <TextView
            android:id="@+id/playlist_description_hint"
            style="@style/FloatingHintStyle"
            android:text="@string/playlist_description"
            android:visibility="gone" />

    </RelativeLayout>

    <TextView
        android:id="@+id/create_playlist"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16"
        android:layout_marginBottom="@dimen/size_32"
        android:background="@drawable/bg_create_pl"
        android:clickable="true"
        android:enabled="false"
        android:focusable="true"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:padding="@dimen/size_16"
        android:text="@string/create_playlist"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/right_guideline"
        app:layout_constraintStart_toEndOf="@id/left_guideline" />

</androidx.constraintlayout.widget.ConstraintLayout>